Update branding to MeegoBiz (Logo, Favicon, Title)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>飞书项目 Commercial OS</title>
+    <title>MeegoBiz Commercial OS</title>
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="logo-box">
-            <img src="assets/logo.svg" alt="飞书项目" style="height: 32px;">
+            <img src="assets/logo.svg" alt="MeegoBiz" style="height: 32px;">
         </div>
 
         <!-- 1. Overview -->
