Add Requirement ID to features and Capability Stats to Entitlements

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <div class="modal-body">
             <div class="form-group"><label class="form-label">技术 ID (Key)</label><input class="form-input" id="feat-id" placeholder="feat_key"></div>
             <div class="form-group"><label class="form-label">名称</label><input class="form-input" id="feat-name"></div>
+            <div class="form-group"><label class="form-label">需求单 ID</label><input class="form-input" id="feat-req-id" placeholder="REQ-..."></div>
             <div class="form-group"><label class="form-label">技术负责人</label><input class="form-input" id="feat-owner"></div>
         </div>
         <div class="modal-foot"><button class="btn btn-primary" onclick="saveFeature()">保存</button></div>
