Add independent Capability Usage Analytics tab

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <div class="nav-item" id="nav-ents" onclick="route('ents')">
                 <span class="nav-icon">👥</span> 客户权益 (Entitlements)
             </div>
+            <div class="nav-item" id="nav-usage" onclick="route('usage')">
+                <span class="nav-icon">📈</span> 能力用量 (Usage Analysis)
+            </div>
         </div>
 
         <!-- Import/Export/Reset/Settings -->
