Optimize AI feature generation prompt for meaningful IDs and update modal title

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!-- AI Feature Gen Modal -->
 <div class="mask" id="modal-ai-feature">
     <div class="modal">
-        <div class="modal-head"><span>✨ AI 智能生成资产</span><span style="cursor:pointer" onclick="closeModals()">✕</span></div>
+        <div class="modal-head"><span>✨ AI 批量生成</span><span style="cursor:pointer" onclick="closeModals()">✕</span></div>
         <div class="modal-body">
             <div class="form-group">
                 <label class="form-label">输入业务领域 (例如: "WMS 仓储管理", "CRM 销售")</label>
