--- a/index.html
+++ b/index.html
@@ -241,12 +241,9 @@
             </div>
 
             <div class="form-group">
-                <label class="form-label">售卖链接 (Checkout URL)</label>
-                <div style="display:flex; gap:8px;">
-                    <input class="form-input" id="sku-link" placeholder="https://buy.stripe.com/..." style="flex:1">
-                    <button class="btn btn-outline" onclick="testSkuLink()" title="测试链接">🔗</button>
-                </div>
-                <div style="font-size:11px; color:#64748b; margin-top:4px;">支付成功后，Webhook 将自动触发权益开通</div>
+                <label class="form-label">商城 SKU ID (Mall Mapping)</label>
+                <input class="form-input" id="sku-mall-id" placeholder="例如: sku_premium_2024_v1">
+                <div style="font-size:11px; color:#64748b; margin-top:4px;">用于接收商城订单 Webhook 时，自动匹配并开通对应权益</div>
             </div>
         </div>
         <div class="modal-foot"><button class="btn btn-primary" onclick="saveSku()">保存</button></div>
